@@ -5,14 +5,18 @@ package org.hiero.mirror.web3.service;
 import static org.hiero.mirror.common.domain.entity.EntityType.CONTRACT;
 import static org.hiero.mirror.common.util.DomainUtils.EVM_ADDRESS_LENGTH;
 import static org.hiero.mirror.common.util.DomainUtils.NANOS_PER_SECOND;
+import static org.hiero.mirror.common.util.DomainUtils.bytesToHex;
 import static org.hiero.mirror.common.util.DomainUtils.convertToNanosMax;
 import static org.hiero.mirror.common.util.DomainUtils.fromEvmAddress;
 import static org.hiero.mirror.common.util.DomainUtils.isLongZeroAddress;
+import static org.hiero.mirror.common.util.DomainUtils.toEvmAddress;
+import static org.hiero.mirror.web3.utils.ByteUtils.wrapToWordSize;
 import static org.hiero.mirror.web3.validation.HexValidator.HEX_PREFIX;
 
 import com.hedera.pbj.runtime.io.buffer.Bytes;
+import jakarta.inject.Named;
 import java.util.ArrayList;
-import java.util.Collections;
+import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -22,11 +26,12 @@ import java.util.Set;
 import lombok.CustomLog;
 import lombok.RequiredArgsConstructor;
 import org.hiero.mirror.common.domain.SystemEntity;
+import org.hiero.mirror.common.domain.contract.ContractAction;
 import org.hiero.mirror.common.domain.contract.ContractResult;
 import org.hiero.mirror.common.domain.entity.Entity;
-import org.hiero.mirror.common.domain.entity.EntityId;
-import org.hiero.mirror.rest.model.AccountTrace;
+import org.hiero.mirror.rest.model.PrestateAccountTrace;
 import org.hiero.mirror.rest.model.PrestateResponse;
+import org.hiero.mirror.web3.Web3Properties;
 import org.hiero.mirror.web3.common.TransactionHashParameter;
 import org.hiero.mirror.web3.common.TransactionIdOrHashParameter;
 import org.hiero.mirror.web3.common.TransactionIdParameter;
@@ -41,12 +46,13 @@ import org.hiero.mirror.web3.repository.ContractTransactionHashRepository;
 import org.hiero.mirror.web3.repository.EntityRepository;
 import org.hiero.mirror.web3.repository.TransactionRepository;
 import org.hiero.mirror.web3.service.model.PrestateRequest;
-import org.springframework.stereotype.Service;
+import org.jspecify.annotations.NullMarked;
 
-@Service
+@Named
 @CustomLog
 @RequiredArgsConstructor
-final class PrestateServiceImpl implements PrestateService {
+@NullMarked
+public final class PrestateServiceImpl implements PrestateService {
 
     public static final long MAX_TRANSACTION_CONSENSUS_TIMESTAMP_RANGE_NS = 35 * 60 * NANOS_PER_SECOND;
 
@@ -59,7 +65,14 @@ final class PrestateServiceImpl implements PrestateService {
     private final EntityRepository entityRepository;
     private final TransactionRepository transactionRepository;
     private final SystemEntity systemEntity;
+    private final Web3Properties web3Properties;
+
     private static final String ZERO_BALANCE = "0x0";
+
+    private static final int RESULT_REVERT = 12;
+    private static final int RESULT_ERROR = 13;
+    private static final int OP_DELEGATECALL = 3;
+    private static final int OP_STATICCALL = 4;
 
     @Override
     public PrestateResponse processPrestateCall(final PrestateRequest prestateRequest) {
@@ -67,8 +80,7 @@ final class PrestateServiceImpl implements PrestateService {
         final var contractResult = contractResultRepository
                 .findById(consensusTimestamp)
                 .orElseThrow(() -> new EntityNotFoundException("Contract result not found: " + consensusTimestamp));
-
-        final var prestateContext = new PrestateContext(prestateRequest, consensusTimestamp);
+        final var prestateContext = new PrestateContext(consensusTimestamp, prestateRequest);
         markTouchedAccounts(prestateContext, contractResult);
         loadAccountTraces(prestateContext);
 
@@ -88,7 +100,8 @@ final class PrestateServiceImpl implements PrestateService {
     }
 
     private void applyDiffFilter(
-            final Map<String, AccountTrace> preAccountTraceMap, final Map<String, AccountTrace> postAccountTraceMap) {
+            final Map<String, PrestateAccountTrace> preAccountTraceMap,
+            final Map<String, PrestateAccountTrace> postAccountTraceMap) {
         final var iterator = preAccountTraceMap.entrySet().iterator();
         while (iterator.hasNext()) {
             final var entry = iterator.next();
@@ -96,6 +109,16 @@ final class PrestateServiceImpl implements PrestateService {
             if (Objects.equals(entry.getValue(), postAccountTraceMap.get(key))) {
                 iterator.remove();
                 postAccountTraceMap.remove(key);
+            }
+        }
+
+        // Add empty entries for newly created accounts (present in post but not in pre)
+        for (final var postEntry : postAccountTraceMap.entrySet()) {
+            final var address = postEntry.getKey();
+            if (!preAccountTraceMap.containsKey(address)) {
+                final var emptyTrace = new PrestateAccountTrace();
+                emptyTrace.setAddress(address);
+                preAccountTraceMap.put(address, emptyTrace);
             }
         }
     }
@@ -108,51 +131,74 @@ final class PrestateServiceImpl implements PrestateService {
 
         final var consensusTimestamp = prestateContext.getConsensusTimestamp();
         final var timestampBeforeTransaction = consensusTimestamp - 1;
+        final var diffMode = prestateContext.getPrestateRequest().diffMode();
 
-        final var preEntityById = toEntityById(entityRepository
-                .findActiveByIdsAndTimestamp(accounts, timestampBeforeTransaction)
-                .orElse(null));
-        final var postEntityById = prestateContext.getPrestateRequest().diffMode()
-                ? toEntityById(entityRepository
-                        .findActiveByIdsAndTimestamp(accounts, consensusTimestamp)
-                        .orElse(null))
-                : null;
+        final var preEntityById =
+                toEntityById(entityRepository.findActiveByIdsAndTimestamp(accounts, timestampBeforeTransaction));
+        final var postEntityById = diffMode
+                ? toEntityById(entityRepository.findActiveByIdsAndTimestamp(accounts, consensusTimestamp))
+                : Map.<Long, Entity>of();
 
         final var preBalances = loadBalances(accounts, timestampBeforeTransaction);
-        final var postBalances =
-                prestateContext.getPrestateRequest().diffMode() ? loadBalances(accounts, consensusTimestamp) : null;
+        final var balanceTransfers =
+                diffMode ? calculateBalanceTransfers(prestateContext.getActions()) : Map.<Long, Long>of();
 
         final var preBytecodes = prestateContext.getPrestateRequest().code()
                 ? loadBytecodes(accounts, timestampBeforeTransaction)
-                : null;
-        final var preStorageByContract =
-                prestateContext.getPrestateRequest().storage() ? prestateContext.getPreStorageByContract() : null;
+                : Map.<Long, byte[]>of();
+        final var postBytecodes =
+                diffMode && prestateContext.getPrestateRequest().code()
+                        ? loadBytecodes(accounts, consensusTimestamp)
+                        : Map.<Long, byte[]>of();
+        final var preStorageByContract = prestateContext.getPrestateRequest().storage()
+                ? prestateContext.getPreStorageByContract()
+                : Map.<Long, Map<String, String>>of();
+        final var postStorageByContract =
+                diffMode && prestateContext.getPrestateRequest().storage()
+                        ? prestateContext.getPostStorageByContract()
+                        : Map.<Long, Map<String, String>>of();
 
         for (final var accountId : accounts) {
             final var preEntity = preEntityById.get(accountId);
-            if (preEntity != null) {
+            final var preBalance = preBalances.getOrDefault(accountId, 0L);
+
+            if (!diffMode) {
+                if (preEntity == null) {
+                    continue;
+                }
                 final var preAccountTrace =
-                        buildAccountTrace(preEntity, preBalances.get(accountId), preBytecodes, preStorageByContract);
+                        buildAccountTrace(preEntity, preBalance, preBytecodes, preStorageByContract);
                 prestateContext.getPreAccountTraces().put(preAccountTrace.getAddress(), preAccountTrace);
-            }
+            } else {
+                final var transfer = balanceTransfers.getOrDefault(accountId, 0L);
+                final var postBalance = preBalance + transfer;
+                final var postEntity = postEntityById.get(accountId);
 
-            if (prestateContext.getPrestateRequest().diffMode()) {
-                final var postEntity = postEntityById != null ? postEntityById.get(accountId) : null;
-                if (postEntity != null) {
+                // Handle newly created accounts (exist in post but not in pre)
+                if (preEntity == null && postEntity != null) {
+                    final var postAccountTrace =
+                            buildAccountTrace(postEntity, postBalance, postBytecodes, postStorageByContract);
+                    prestateContext.getPostAccountTraces().put(postAccountTrace.getAddress(), postAccountTrace);
+                    continue;
+                }
 
-                    final var postBytecodes =
-                            prestateContext.getPrestateRequest().code()
-                                    ? loadBytecodes(accounts, consensusTimestamp)
-                                    : null;
-                    final var postStorageByContract =
-                            prestateContext.getPrestateRequest().storage()
-                                    ? prestateContext.getPostStorageByContract()
-                                    : null;
-                    final var postAccountTrace = buildAccountTrace(
-                            postEntity,
-                            postBalances != null ? postBalances.get(accountId) : null,
-                            postBytecodes,
-                            postStorageByContract);
+                if (preEntity == null) {
+                    continue;
+                }
+
+                final var hasBalanceChange = transfer != 0;
+                final var hasStorageChange = postStorageByContract.containsKey(accountId);
+                final var hasBytecodeChange =
+                        prestateContext.getPrestateRequest().code()
+                                && !Arrays.equals(preBytecodes.get(accountId), postBytecodes.get(accountId));
+
+                if (hasBalanceChange || hasStorageChange || hasBytecodeChange) {
+                    final var preAccountTrace =
+                            buildAccountTrace(preEntity, preBalance, preBytecodes, preStorageByContract);
+                    prestateContext.getPreAccountTraces().put(preAccountTrace.getAddress(), preAccountTrace);
+
+                    final var postAccountTrace =
+                            buildAccountTrace(preEntity, postBalance, postBytecodes, postStorageByContract);
                     prestateContext.getPostAccountTraces().put(postAccountTrace.getAddress(), postAccountTrace);
                 }
             }
@@ -160,8 +206,8 @@ final class PrestateServiceImpl implements PrestateService {
     }
 
     private Map<Long, Entity> toEntityById(final List<Entity> entities) {
-        if (entities == null) {
-            return Collections.emptyMap();
+        if (entities.isEmpty()) {
+            return Map.of();
         }
 
         final var entityById = new HashMap<Long, Entity>(entities.size());
@@ -171,32 +217,26 @@ final class PrestateServiceImpl implements PrestateService {
         return entityById;
     }
 
-    private AccountTrace buildAccountTrace(
+    private PrestateAccountTrace buildAccountTrace(
             final Entity entity,
             final Long balance,
             final Map<Long, byte[]> bytecodes,
             final Map<Long, Map<String, String>> storageByContract) {
         final var entityId = entity.getId();
-        final var accountTrace = new AccountTrace();
+        final var accountTrace = new PrestateAccountTrace();
         accountTrace.setAddress(resolveAddress(entity));
-        accountTrace.setBalance(balance != null ? HEX_PREFIX + Long.toHexString(balance) : ZERO_BALANCE);
+        accountTrace.setBalance(balance != null ? HEX_PREFIX + Long.toHexString(balance) : null);
 
         final var nonce = entity.getEthereumNonce();
         accountTrace.setNonce(nonce != null ? nonce : 0L);
 
-        if (CONTRACT.name().equalsIgnoreCase(entity.getType().name())) {
-            if (bytecodes != null) {
-                final var bytecode = bytecodes.get(entityId);
-                if (bytecode != null) {
-                    accountTrace.setCode(Bytes.wrap(bytecode).toHex());
-                }
+        if (entity.getType() == CONTRACT) {
+            final var bytecode = bytecodes.get(entityId);
+            if (bytecode != null) {
+                accountTrace.setCode(wrapToWordSize(bytecode));
             }
-            if (storageByContract != null) {
-                final var contractStorage = storageByContract.get(entityId);
-                if (contractStorage != null && !contractStorage.isEmpty()) {
-                    accountTrace.setStorage(contractStorage);
-                }
-            }
+            final var contractStorage = storageByContract.getOrDefault(entityId, Map.of());
+            accountTrace.setStorage(contractStorage);
         }
 
         return accountTrace;
@@ -204,7 +244,7 @@ final class PrestateServiceImpl implements PrestateService {
 
     private Map<Long, byte[]> loadBytecodes(final Set<Long> entityIds, final long timestamp) {
         if (entityIds.isEmpty()) {
-            return new HashMap<>();
+            return Map.of();
         }
 
         final var contracts = contractRepository.findByIdsAndConsensusTimestamp(entityIds, timestamp);
@@ -220,56 +260,158 @@ final class PrestateServiceImpl implements PrestateService {
 
     private Map<Long, Long> loadBalances(final Set<Long> accountIds, final long blockTimestamp) {
         if (accountIds.isEmpty()) {
-            return Collections.emptyMap();
+            return Map.of();
         }
 
+        final var results = accountBalanceRepository.findHistoricalAccountBalancesUpToTimestamp(
+                accountIds, blockTimestamp, systemEntity.treasuryAccount().getId());
         final var balances = new HashMap<Long, Long>(accountIds.size());
-        for (final var accountId : accountIds) {
-            balances.put(
-                    accountId,
-                    accountBalanceRepository
-                            .findHistoricalAccountBalanceUpToTimestamp(
-                                    accountId,
-                                    blockTimestamp,
-                                    systemEntity.treasuryAccount().getId())
-                            .orElse(0L));
+        for (final var result : results) {
+            balances.put(result.getAccountId(), result.getBalance());
         }
         return balances;
+    }
+
+    private Map<Long, Long> calculateBalanceTransfers(final List<ContractAction> actions) {
+        final var transfers = new HashMap<Long, Long>();
+        for (final var action : actions) {
+            final int resultType = action.getResultDataType();
+            if (resultType == RESULT_REVERT || resultType == RESULT_ERROR) {
+                continue;
+            }
+
+            final int opType = action.getCallOperationType();
+            if (opType == OP_DELEGATECALL || opType == OP_STATICCALL) {
+                continue;
+            }
+
+            final long value = action.getValue();
+            if (value == 0) {
+                continue;
+            }
+
+            final Long callerId =
+                    action.getCaller() != null ? action.getCaller().getId() : null;
+            final Long recipientId = getRecipientId(action).orElse(null);
+
+            if (callerId != null) {
+                transfers.merge(callerId, -value, Long::sum);
+            }
+            if (recipientId != null) {
+                transfers.merge(recipientId, value, Long::sum);
+            }
+        }
+        return transfers;
+    }
+
+    private Optional<Long> getRecipientId(final ContractAction action) {
+        if (action.getRecipientAccount() != null) {
+            return Optional.of(action.getRecipientAccount().getId());
+        }
+        if (action.getRecipientContract() != null) {
+            return Optional.of(action.getRecipientContract().getId());
+        }
+        return Optional.empty();
     }
 
     private void markTouchedAccounts(final PrestateContext prestateContext, final ContractResult contractResult) {
         final var consensusTimestamp = prestateContext.getConsensusTimestamp();
         populateTouchedEntitiesFromActions(prestateContext, consensusTimestamp);
         populateTouchedEntitiesFromStateChanges(prestateContext, consensusTimestamp);
-        prestateContext.addAccount(contractResult.getContractId());
-        prestateContext.addAccount(contractResult.getSenderId().getId());
+        addAccountIfCapacity(prestateContext, contractResult.getContractId());
+        addAccountIfCapacity(prestateContext, contractResult.getSenderId().getId());
+    }
+
+    private void addAccountIfCapacity(final PrestateContext prestateContext, final Long accountId) {
+        final var accounts = prestateContext.getAccounts();
+        if (accountId != null
+                && (accounts.contains(accountId) || accounts.size() < web3Properties.getMaxTouchedAccounts())) {
+            prestateContext.addAccount(accountId);
+        }
     }
 
     private void populateTouchedEntitiesFromActions(
             final PrestateContext prestateContext, final long consensusTimestamp) {
         final var actions = contractActionRepository.findByConsensusTimestamp(consensusTimestamp);
+        prestateContext.setActions(actions);
+
         for (final var action : actions) {
-            final var caller = action.getCaller();
-            final var recipientAccount = action.getRecipientAccount();
-            final var recipientContract = action.getRecipientContract();
-
-            prestateContext.addAccount(caller);
-            prestateContext.addAccount(recipientAccount);
-            prestateContext.addAccount(recipientContract);
-
+            prestateContext.addAccount(action.getCaller());
+            prestateContext.addAccount(action.getRecipientAccount());
+            prestateContext.addAccount(action.getRecipientContract());
             addEntityFromRecipientAddress(prestateContext, action.getRecipientAddress());
         }
     }
 
+    private static final int STATE_CHANGE_PAGE_SIZE = 5000;
+    private static final int STATE_CHANGE_MAX_PAGES = 10;
+
     private void populateTouchedEntitiesFromStateChanges(
             final PrestateContext prestateContext, final long consensusTimestamp) {
-        final var stateChanges = contractStateChangeRepository.findByConsensusTimestamp(consensusTimestamp);
-        for (final var stateChange : stateChanges) {
-            final var contractId = stateChange.getContractId();
-            prestateContext.addAccount(contractId);
-            prestateContext.addPreStorageSlot(contractId, stateChange.getSlot(), stateChange.getValueRead());
-            if (prestateContext.getPrestateRequest().diffMode()) {
-                prestateContext.addPostStorageSlot(contractId, stateChange.getSlot(), stateChange.getValueWritten());
+        final var accountLimit = web3Properties.getMaxTouchedAccounts()
+                - prestateContext.getAccounts().size();
+        if (accountLimit <= 0) {
+            return;
+        }
+
+        final var diffMode = prestateContext.getPrestateRequest().diffMode();
+        final var includeStorage = prestateContext.getPrestateRequest().storage();
+
+        if (diffMode) {
+            populateModifiedStateChanges(prestateContext, consensusTimestamp, accountLimit, includeStorage);
+        } else {
+            populateAllStateChanges(prestateContext, consensusTimestamp, accountLimit, includeStorage);
+        }
+    }
+
+    private void populateModifiedStateChanges(
+            final PrestateContext prestateContext,
+            final long consensusTimestamp,
+            final int accountLimit,
+            final boolean includeStorage) {
+        for (int page = 0; page < STATE_CHANGE_MAX_PAGES; page++) {
+            final int offset = page * STATE_CHANGE_PAGE_SIZE;
+            final var stateChanges = contractStateChangeRepository.findModifiedByConsensusTimestamp(
+                    consensusTimestamp, accountLimit, STATE_CHANGE_PAGE_SIZE, offset);
+
+            for (final var stateChange : stateChanges) {
+                final var contractId = stateChange.getContractId();
+                prestateContext.addAccount(contractId);
+
+                if (includeStorage) {
+                    prestateContext.addPreStorageSlot(contractId, stateChange.getSlot(), stateChange.getValueRead());
+                    prestateContext.addPostStorageSlot(
+                            contractId, stateChange.getSlot(), stateChange.getValueWritten());
+                }
+            }
+
+            if (stateChanges.size() < STATE_CHANGE_PAGE_SIZE) {
+                break;
+            }
+        }
+    }
+
+    private void populateAllStateChanges(
+            final PrestateContext prestateContext,
+            final long consensusTimestamp,
+            final int accountLimit,
+            final boolean includeStorage) {
+        for (int page = 0; page < STATE_CHANGE_MAX_PAGES; page++) {
+            final int offset = page * STATE_CHANGE_PAGE_SIZE;
+            final var stateChanges = contractStateChangeRepository.findByConsensusTimestamp(
+                    consensusTimestamp, accountLimit, STATE_CHANGE_PAGE_SIZE, offset);
+
+            for (final var stateChange : stateChanges) {
+                final var contractId = stateChange.getContractId();
+                prestateContext.addAccount(contractId);
+
+                if (includeStorage) {
+                    prestateContext.addPreStorageSlot(contractId, stateChange.getSlot(), stateChange.getValueRead());
+                }
+            }
+
+            if (stateChanges.size() < STATE_CHANGE_PAGE_SIZE) {
+                break;
             }
         }
     }
@@ -294,16 +436,16 @@ final class PrestateServiceImpl implements PrestateService {
         }
         final var alias = entity.getAlias();
         if (alias != null && alias.length == EVM_ADDRESS_LENGTH) {
-            return Bytes.wrap(alias).toHex();
+            return bytesToHex(alias);
         }
-        return EntityId.of(entity.getId()).toString();
+        return HEX_PREFIX + bytesToHex(toEvmAddress(entity.getId()));
     }
 
     private long resolveConsensusTimestamp(final TransactionIdOrHashParameter transactionIdOrHash) {
         return switch (transactionIdOrHash) {
             case TransactionHashParameter transactionHash ->
                 contractTransactionHashRepository
-                        .findByHash(transactionHash.hash().toArray())
+                        .findByHash(transactionHash.hash().toArrayUnsafe())
                         .orElseThrow(() ->
                                 new EntityNotFoundException("Contract transaction hash not found: " + transactionHash))
                         .getConsensusTimestamp();
@@ -311,12 +453,12 @@ final class PrestateServiceImpl implements PrestateService {
                 final var validStartNs = convertToNanosMax(transactionId.validStart());
                 final var payerAccountId = transactionId.payerAccountId();
                 final var transaction = transactionRepository
-                        .findByPayerAccountIdAndValidStartNs(
+                        .findByTransactionId(
                                 payerAccountId.getId(),
                                 validStartNs,
                                 validStartNs,
                                 validStartNs + MAX_TRANSACTION_CONSENSUS_TIMESTAMP_RANGE_NS)
-                        .orElseThrow(() -> new EntityNotFoundException("Transaction not found: " + transactionId));
+                        .orElseThrow(() -> new EntityNotFoundException("Transaction not found."));
 
                 yield transaction.getConsensusTimestamp();
             }
